<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical" 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/FuerzaLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etn1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="52.0dip"
                    android:layout_marginLeft="52.0dip"
                    android:layout_marginTop="52.0dip"
                    android:ems="10"
                    android:hint="@string/etn1"
                    android:inputType="number"
                    android:textSize="24.0sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/etn2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="52.0dip"
                    android:layout_marginLeft="52.0dip"
                    android:layout_marginTop="52.0dip"
                    android:ems="10"
                    android:hint="@string/etn2"
                    android:inputType="number"
                    android:textSize="24.0sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/etn1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/AnguloLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/angulo_et1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="52.0dip"
                    android:layout_marginLeft="52.0dip"
                    android:layout_marginTop="50.0dip"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/angulo_et1"
                    android:inputType="number"
                    android:textSize="24.0sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/etn2" />

                <EditText
                    android:id="@+id/angulo_et2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="52.0dip"
                    android:layout_marginLeft="52.0dip"
                    android:layout_marginTop="50.0dip"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/angulo_et2"
                    android:inputType="number"
                    android:textSize="24.0sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/angulo_et1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="55.0dip"
                    android:layout_height="55.0dip"
                    android:layout_marginStart="52.0dip"
                    android:layout_marginLeft="52.0dip"
                    android:layout_marginTop="50.0dip"
                    android:contentDescription="@string/imagebutton"
                    android:onClick="agregar"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/angulo_et"
                    app:srcCompat="@drawable/mas1" />

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="55.0dip"
                    android:layout_height="55.0dip"

                    android:layout_marginTop="50.0dip"
                    android:contentDescription="@string/imagebutton"
                    android:onClick="eliminar"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/angulo_et"
                    app:srcCompat="@drawable/menos1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="45.0dip"
                    android:layout_marginLeft="45.0dip"
                    android:layout_marginTop="50.0dip"
                    android:onClick="Calcular"
                    android:text="@string/button"
                    android:textSize="24.0sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imageButton" />

                <Button
                    android:id="@+id/buttonw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="45.0dip"
                    android:layout_marginLeft="45.0dip"
                    android:layout_marginTop="50.0dip"
                    android:alpha="0.25"
                    android:onClick="Graficar"
                    android:text="@string/graficar"
                    android:textSize="24.0sp"
                    android:visibility="visible"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imageButton" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="52.0dip"
                android:layout_marginLeft="52.0dip"
                android:layout_marginTop="50.0dip"
                android:text="@string/tv"
                android:textSize="24.0sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_weight="0">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_weight="0"
            app:adSize="BANNER"
            app:adUnitId="ca-app-pub-5014261020839028/3539470045" />
    </LinearLayout>
</LinearLayout>